// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> General 1`] = `
<div>
  <div
    style="width: 310px;"
  >
    <div
      class="HvDropdown-root-1 HvFormElement-root-15"
    >
      <div
        class="HvBaseDropdown-root-16 HvDropdown-dropdown-2"
      >
        <div
          aria-expanded="true"
          aria-owns="hvbasedropdown3-children-container"
          class="HvBaseDropdown-anchor-17"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="hvbasedropdown3-children-container"
            class="HvBaseDropdown-header-21 HvDropdown-dropdownHeader-11 HvBaseDropdown-headerOpen-22 HvDropdown-dropdownHeaderOpen-13 HvBaseDropdown-headerOpenDown-24"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection-27"
            >
              <div
                class="HvDropdown-placeholder-9 HvTypography-root-36 HvTypography-normalText-49 HvTypography-noWrap-57"
              >
                <b>
                  1
                </b>
                 / 4
              </div>
            </div>
            <div
              class="HvBaseDropdown-arrow-26 HvDropdown-arrow-4 HvIconBase-root-58 HvIconBase-xs-59"
              name="DropUpXS"
            >
              <svg
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M10.6 7.95l-.7.7L6 4.75l-3.9 3.9-.7-.7L6 3.35z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> SingleSelection 1`] = `
<div>
  <div
    style="width: 310px;"
  >
    <div
      class="HvDropdown-root-174 HvFormElement-root-188"
      id="dropdown7"
    >
      <div
        class="HvBaseDropdown-root-189 HvDropdown-dropdown-175"
      >
        <div
          aria-expanded="true"
          aria-owns="dropdown7-dropdown-children-container"
          class="HvBaseDropdown-anchor-190"
          id="dropdown7-dropdown"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="dropdown7-dropdown-children-container"
            class="HvBaseDropdown-header-194 HvDropdown-dropdownHeader-184 HvBaseDropdown-headerOpen-195 HvDropdown-dropdownHeaderOpen-186 HvBaseDropdown-headerOpenDown-197"
            id="dropdown7-dropdown-header"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection-200"
            >
              <div
                class="HvDropdown-placeholder-182 HvTypography-root-209 HvTypography-normalText-222 HvTypography-noWrap-230"
              >
                Select...
              </div>
            </div>
            <div
              class="HvBaseDropdown-arrow-199 HvDropdown-arrow-177 HvIconBase-root-231 HvIconBase-xs-232"
              name="DropUpXS"
            >
              <svg
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M10.6 7.95l-.7.7L6 4.75l-3.9 3.9-.7-.7L6 3.35z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> SingleSelectionWithSearch 1`] = `
<div>
  <div
    style="width: 310px;"
  >
    <div
      class="HvDropdown-root-277 HvFormElement-root-291"
      id="dropdown6"
    >
      <div
        class="HvBaseDropdown-root-292 HvDropdown-dropdown-278"
      >
        <div
          aria-expanded="true"
          aria-owns="dropdown6-dropdown-children-container"
          class="HvBaseDropdown-anchor-293"
          id="dropdown6-dropdown"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="dropdown6-dropdown-children-container"
            class="HvBaseDropdown-header-297 HvDropdown-dropdownHeader-287 HvBaseDropdown-headerOpen-298 HvDropdown-dropdownHeaderOpen-289 HvBaseDropdown-headerOpenDown-300"
            id="dropdown6-dropdown-header"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection-303"
            >
              <div
                class="HvDropdown-placeholder-285 HvTypography-root-312 HvTypography-normalText-325 HvTypography-noWrap-333"
              >
                value 2
              </div>
            </div>
            <div
              class="HvBaseDropdown-arrow-302 HvDropdown-arrow-280 HvIconBase-root-334 HvIconBase-xs-335"
              name="DropUpXS"
            >
              <svg
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M10.6 7.95l-.7.7L6 4.75l-3.9 3.9-.7-.7L6 3.35z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
